--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,16 @@ after_success:
     - docker push ccifuentes95/multi-api 
     - docker push ccifuentes95/multi-worker 
     - docker push ccifuentes95/multi-server 
+
+deploy:
+    provider: elasticbeanstalk
+    region: 'us-east-2'
+    app: 'multi-docker'
+    env: 'MultiDocker-env'
+    bucket_name: 'elasticbeanstalk-us-east-2-572736066318'
+    bucket_path: 'docker-multi'
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+
