--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
 
 after_success:
     - docker logout
-    - echo "$DOCKER_PASSWORD" || docker login -u "$DOCKER_ID" --password-stdin
+    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
     - docker build -t ccifuentes95/multi-client ./client
     - docker build -t ccifuentes95/multi-api ./api
     - docker build -t ccifuentes95/multi-worker ./worker
